--- a/drivers/block/zram/Kconfig
+++ b/drivers/block/zram/Kconfig
@@ -1,8 +1,8 @@
 config ZRAM
 	tristate "Compressed RAM block device support"
 	depends on BLOCK && SYSFS && ZSMALLOC
-	select LZO_COMPRESS
-	select LZO_DECOMPRESS
+	select LZ4_COMPRESS
+	select LZ4_DECOMPRESS
 	default n
 	help
 	  Creates virtual block devices called /dev/zramX (X = 0, 1, ...).
@@ -15,12 +15,12 @@ config ZRAM
 
 	  See zram.txt for more information.
 
-config ZRAM_LZ4_COMPRESS
-	bool "Enable LZ4 algorithm support"
+config ZRAM_LZO_COMPRESS
+	bool "Enable LZO algorithm support"
 	depends on ZRAM
-	select LZ4_COMPRESS
-	select LZ4_DECOMPRESS
+	select LZO_COMPRESS
+	select LZO_DECOMPRESS
 	default n
 	help
-	  This option enables LZ4 compression algorithm support. Compression
+	  This option enables LZO compression algorithm support. Compression
 	  algorithm can be changed using `comp_algorithm' device attribute.
