--- a/drivers/block/zram/Makefile
+++ b/drivers/block/zram/Makefile
@@ -1,5 +1,5 @@
-zram-y	:=	zcomp_lzo.o zcomp.o zram_drv.o
+zram-y	:=	zcomp_lz4.o zcomp.o zram_drv.o
 
-zram-$(CONFIG_ZRAM_LZ4_COMPRESS) += zcomp_lz4.o
+zram-$(CONFIG_ZRAM_LZO_COMPRESS) += zcomp_lzo.o
 
 obj-$(CONFIG_ZRAM)	+=	zram.o
