--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -402,9 +402,17 @@ CONFIG_ARM64_VA_BITS_39=y
 # CONFIG_ARM64_VA_BITS_48 is not set
 CONFIG_ARM64_VA_BITS=39
 # CONFIG_CPU_BIG_ENDIAN is not set
-# CONFIG_SCHED_MC is not set
+CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
-# CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE is not set
+CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE=y
+CONFIG_SCHED_HMP=y
+# CONFIG_SCHED_HMP_PRIO_FILTER is not set
+CONFIG_HMP_FAST_CPU_MASK=""
+CONFIG_HMP_SLOW_CPU_MASK=""
+CONFIG_HMP_VARIABLE_SCALE=y
+CONFIG_HMP_FREQUENCY_INVARIANT_SCALE=y
+# CONFIG_SCHED_HMP_LITTLE_PACKING is not set
+CONFIG_SCHED_HMP_TASK_BASED_SOFTLANDING=y
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_TIMA is not set
@@ -1304,7 +1312,7 @@ CONFIG_SCSI_MOD=y
 # CONFIG_RAID_ATTRS is not set
 CONFIG_SCSI=y
 CONFIG_UFS_FMP_DM_CRYPT=y
-# CONFIG_UFS_SRPMB is not set
+CONFIG_UFS_SRPMB=y
 CONFIG_SCSI_DMA=y
 # CONFIG_SCSI_NETLINK is not set
 # CONFIG_SCSI_MQ_DEFAULT is not set
@@ -2665,7 +2673,7 @@ CONFIG_MALI_SEC_UTILIZATION=y
 CONFIG_MALI_SEC_JOB_STATUS_CHECK=y
 CONFIG_MALI_VK_BOOST=y
 CONFIG_VGA_ARB=y
-CONFIG_VGA_ARB_MAX_GPUS=18
+CONFIG_VGA_ARB_MAX_GPUS=20
 CONFIG_DRM=y
 CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_KMS_FB_HELPER=y
@@ -3708,7 +3716,7 @@ CONFIG_SEC_PARAM=y
 CONFIG_CM_OFFSET=7340596
 # CONFIG_SEC_EVENT_LOG is not set
 CONFIG_SEC_BOOTSTAT=y
-# CONFIG_ARGOS is not set
+CONFIG_ARGOS=y
 # CONFIG_SEC_KWATCHER is not set
 # CONFIG_SEC_MMIOTRACE is not set
 
@@ -4469,7 +4477,10 @@ CONFIG_SDFAT_DEFAULT_IOCHARSET="iso8859-15"
 CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
 CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
-# CONFIG_SDFAT_DEBUG is not set
+CONFIG_SDFAT_DEBUG=y
+# CONFIG_SDFAT_DBG_IOCTL is not set
+# CONFIG_SDFAT_DBG_MSG is not set
+# CONFIG_SDFAT_DBG_BUGON is not set
 # CONFIG_SDFAT_STATISTICS is not set
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
@@ -4921,7 +4932,9 @@ CONFIG_CRYPTO_DEV_S5P=y
 # CONFIG_CRYPTO_DEV_CCP is not set
 CONFIG_FMP_UFS=y
 CONFIG_FMP_DM_CRYPT=y
-# CONFIG_FIPS_FMP is not set
+CONFIG_FIPS_FMP=y
+CONFIG_NODE_FOR_SELFTEST_FAIL=y
+# CONFIG_PANIC_FOR_SELFTEST_FAIL is not set
 # CONFIG_ASYMMETRIC_KEY_TYPE is not set
 
 #
@@ -4931,7 +4944,7 @@ CONFIG_FMP_DM_CRYPT=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
-CONFIG_CRYPTO_GHASH_ARM64_CE=y
+# CONFIG_CRYPTO_GHASH_ARM64_CE is not set
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
