fix build errors

--- a/drivers/video/fbdev/exynos/dpu/Kconfig
+++ b/drivers/video/fbdev/exynos/dpu/Kconfig
@@ -49,7 +49,7 @@ config DECON_BLOCKING_MODE
 
 config DECON_EVENT_LOG
 	bool "Display sub-system event logger (DECON/DSIM/DPP)"
-        depends on DEBUG_INFO && EXYNOS_DECON_8895
+        depends on EXYNOS_DECON_8895
         default y
 
 config DECON_HIBER
