--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -144,15 +144,13 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="usr/boot.cpio"
-CONFIG_INITRAMFS_ROOT_UID=0
-CONFIG_INITRAMFS_ROOT_GID=0
+CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
-CONFIG_RD_BZIP2=y
-CONFIG_RD_LZMA=y
-CONFIG_RD_XZ=y
+# CONFIG_RD_BZIP2 is not set
+# CONFIG_RD_LZMA is not set
+# CONFIG_RD_XZ is not set
 CONFIG_RD_LZO=y
-CONFIG_RD_LZ4=y
+# CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -2568,7 +2566,7 @@ CONFIG_OIS_USE_RUMBA_S4=y
 # CONFIG_OIS_USE_RUMBA_S6 is not set
 CONFIG_COMPANION_FACTORY_VALIDATION=y
 CONFIG_SECURE_CAMERA_USE=y
-CONFIG_USE_SIGNED_BINARY=y
+# CONFIG_USE_SIGNED_BINARY is not set
 CONFIG_MEDIA_EXYNOS=y
 # CONFIG_SOC_CAMERA is not set
 # CONFIG_VIDEO_SAMSUNG_EXYNOS4_IS is not set
@@ -2785,6 +2783,7 @@ CONFIG_EXYNOS_MIPI_DISPLAYPORT=y
 # CONFIG_EXYNOS_ZEBU_EMUL_DISP is not set
 CONFIG_FB_WINDOW_UPDATE=y
 CONFIG_DECON_BLOCKING_MODE=y
+CONFIG_DECON_EVENT_LOG=y
 CONFIG_DECON_HIBER=y
 CONFIG_SUPPORT_DOZE=y
 CONFIG_SUPPORT_DSU=y
@@ -3679,7 +3678,7 @@ CONFIG_ION=y
 # CONFIG_ION_DUMMY is not set
 CONFIG_ION_EXYNOS=y
 # CONFIG_ION_EXYNOS_STAT_LOG is not set
-CONFIG_ION_EXYNOS_OF=y
+# CONFIG_ION_EXYNOS_OF is not set
 # CONFIG_FIQ_DEBUGGER is not set
 # CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_STAGING_BOARD is not set
@@ -4244,10 +4243,7 @@ CONFIG_EXYNOS_SNAPSHOT_WATCHDOG_RESET=y
 CONFIG_EXYNOS_SNAPSHOT_CRASH_KEY=y
 # CONFIG_EXYNOS_SNAPSHOT_SFRDUMP is not set
 # CONFIG_EXYNOS_SNAPSHOT_MINIMIZED_MODE is not set
-CONFIG_EXYNOS_CORESIGHT=y
-CONFIG_EXYNOS_CORESIGHT_PC_INFO=y
-CONFIG_PC_ITERATION=5
-# CONFIG_EXYNOS_CORESIGHT_MAINTAIN_DBG_REG is not set
+# CONFIG_EXYNOS_CORESIGHT is not set
 # CONFIG_EXYNOS_CORESIGHT_ETM is not set
 # CONFIG_EXYNOS_CORESIGHT_STM is not set
 # CONFIG_EXYNOS_CONSOLE_DEBUGGER is not set
@@ -4641,7 +4637,7 @@ CONFIG_STRIP_ASM_SYMS=y
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
-CONFIG_SECTION_MISMATCH_WARN_ONLY=y
+# CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
@@ -4693,7 +4689,7 @@ CONFIG_PANIC_TIMEOUT=1
 # CONFIG_DEBUG_ATOMIC_SLEEP is not set
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 # CONFIG_LOCK_TORTURE_TEST is not set
-# CONFIG_STACKTRACE is not set
+CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 CONFIG_DEBUG_BUGVERBOSE=y
@@ -4929,7 +4925,9 @@ CONFIG_CRYPTO_JITTERENTROPY=y
 # CONFIG_CRYPTO_POST_LATE_INIT is not set
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_S5P=y
-# CONFIG_CRYPTO_DEV_CCP is not set
+CONFIG_CRYPTO_DEV_CCP=y
+CONFIG_CRYPTO_DEV_CCP_DD=y
+CONFIG_CRYPTO_DEV_CCP_CRYPTO=y
 CONFIG_FMP_UFS=y
 CONFIG_FMP_DM_CRYPT=y
 CONFIG_FIPS_FMP=y
@@ -4944,7 +4942,7 @@ CONFIG_NODE_FOR_SELFTEST_FAIL=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
-# CONFIG_CRYPTO_GHASH_ARM64_CE is not set
+CONFIG_CRYPTO_GHASH_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
@@ -4986,22 +4984,11 @@ CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_LZ4_COMPRESS=m
-CONFIG_LZ4_DECOMPRESS=y
-CONFIG_XZ_DEC=y
-# CONFIG_XZ_DEC_X86 is not set
-# CONFIG_XZ_DEC_POWERPC is not set
-# CONFIG_XZ_DEC_IA64 is not set
-CONFIG_XZ_DEC_ARM=y
-CONFIG_XZ_DEC_ARMTHUMB=y
-# CONFIG_XZ_DEC_SPARC is not set
-CONFIG_XZ_DEC_BCJ=y
-# CONFIG_XZ_DEC_TEST is not set
+CONFIG_LZ4_DECOMPRESS=m
+# CONFIG_XZ_DEC is not set
+# CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
-CONFIG_DECOMPRESS_BZIP2=y
-CONFIG_DECOMPRESS_LZMA=y
-CONFIG_DECOMPRESS_XZ=y
 CONFIG_DECOMPRESS_LZO=y
-CONFIG_DECOMPRESS_LZ4=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
