--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -139,7 +139,11 @@ CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
-# CONFIG_NAMESPACES is not set
+CONFIG_NAMESPACES=y
+CONFIG_UTS_NS=y
+# CONFIG_USER_NS is not set
+CONFIG_PID_NS=y
+CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -293,11 +297,10 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
+# CONFIG_IOSCHED_NOOP is not set
 CONFIG_IOSCHED_DEADLINE=y
 # CONFIG_IOSCHED_CFQ is not set
 CONFIG_DEFAULT_DEADLINE=y
-# CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_PADATA=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
@@ -1310,6 +1313,7 @@ CONFIG_SCSI_MOD=y
 # CONFIG_RAID_ATTRS is not set
 CONFIG_SCSI=y
 CONFIG_UFS_FMP_DM_CRYPT=y
+CONFIG_UFS_FMP_EXT4CRYPT_FS=y
 CONFIG_UFS_SRPMB=y
 CONFIG_SCSI_DMA=y
 # CONFIG_SCSI_NETLINK is not set
@@ -1808,7 +1812,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_IPMI_HANDLER is not set
 CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
-# CONFIG_HW_RANDOM_EXYNOS is not set
+CONFIG_HW_RANDOM_EXYNOS=y
 CONFIG_HW_RANDOM_EXYNOS_SWD=y
 CONFIG_EXYRNG_FIPS_COMPLIANCE=y
 # CONFIG_EXYRNG_FAIL_POLICY_DISABLE is not set
@@ -2857,7 +2861,8 @@ CONFIG_SND_JACK=y
 # CONFIG_SND_PCM_OSS is not set
 # CONFIG_SND_PCM_TIMER is not set
 CONFIG_SND_HRTIMER=y
-# CONFIG_SND_DYNAMIC_MINORS is not set
+CONFIG_SND_DYNAMIC_MINORS=y
+CONFIG_SND_MAX_CARDS=4
 # CONFIG_SND_SUPPORT_OLD_API is not set
 CONFIG_SND_PROC_FS=y
 # CONFIG_SND_VERBOSE_PROCFS is not set
@@ -3275,6 +3280,7 @@ CONFIG_USB_U_SERIAL=y
 CONFIG_USB_U_ETHER=y
 CONFIG_USB_F_NCM=y
 CONFIG_USB_F_RNDIS=y
+CONFIG_USB_F_MASS_STORAGE=y
 CONFIG_USB_F_FS=y
 CONFIG_USB_F_MTP=y
 CONFIG_USB_F_PTP=y
@@ -3291,7 +3297,7 @@ CONFIG_USB_CONFIGFS_NCM=y
 CONFIG_USB_CONFIGFS_RNDIS=y
 # CONFIG_USB_CONFIGFS_EEM is not set
 # CONFIG_USB_CONFIGFS_PHONET is not set
-# CONFIG_USB_CONFIGFS_MASS_STORAGE is not set
+CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 # CONFIG_USB_CONFIGFS_F_LB_SS is not set
 CONFIG_USB_CONFIGFS_F_FS=y
 CONFIG_USB_CONFIGFS_F_DM=y
@@ -3353,7 +3359,8 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_CB710 is not set
 # CONFIG_MMC_VIA_SDMMC is not set
 CONFIG_MMC_DW=y
-# CONFIG_MMC_DW_FMP_DM_CRYPT is not set
+CONFIG_MMC_DW_FMP_DM_CRYPT=y
+CONFIG_MMC_DW_FMP_EXT4CRYPT_FS=y
 CONFIG_MMC_DW_IDMAC=y
 CONFIG_MMC_DW_64BIT_DESC=y
 CONFIG_MMC_DW_PLTFM=y
@@ -3855,7 +3862,7 @@ CONFIG_EXYNOS_PM_DVS=y
 CONFIG_CAL_IF=y
 CONFIG_PMUCAL=y
 CONFIG_CMUCAL=y
-CONFIG_CMUCAL_DEBUG=y
+# CONFIG_CMUCAL_DEBUG is not set
 CONFIG_ACPM_DVFS=y
 # CONFIG_VDD_AUTO_CAL is not set
 CONFIG_USI=y
@@ -4414,10 +4421,12 @@ CONFIG_INTERRUPTIBLE_SYNC=y
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT2=y
-CONFIG_EXT4_FS_POSIX_ACL=y
+# CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
-# CONFIG_EXT4_ENCRYPTION is not set
+CONFIG_EXT4_ENCRYPTION=y
+CONFIG_EXT4_FS_ENCRYPTION=y
 # CONFIG_EXT4_DEBUG is not set
+CONFIG_EXT4_SEC_CRYPTO_EXTENSION=y
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
 CONFIG_FS_MBCACHE=y
@@ -4428,7 +4437,13 @@ CONFIG_FS_MBCACHE=y
 # CONFIG_OCFS2_FS is not set
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+# CONFIG_F2FS_STAT_FS is not set
+CONFIG_F2FS_FS_XATTR=y
+# CONFIG_F2FS_FS_POSIX_ACL is not set
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
@@ -4543,6 +4558,7 @@ CONFIG_LOCKD_V4=y
 CONFIG_NFS_COMMON=y
 CONFIG_SUNRPC=m
 CONFIG_SUNRPC_GSS=m
+# CONFIG_RPCSEC_GSS_KRB5 is not set
 # CONFIG_SUNRPC_DEBUG is not set
 # CONFIG_CEPH_FS is not set
 CONFIG_CIFS=m
@@ -4767,7 +4783,7 @@ CONFIG_STRICT_DEVMEM=y
 CONFIG_KEYS=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
-# CONFIG_ENCRYPTED_KEYS is not set
+CONFIG_ENCRYPTED_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 # CONFIG_SECURITY_PERF_EVENTS_RESTRICT is not set
 CONFIG_SECURITY=y
@@ -4787,9 +4803,13 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_YAMA is not set
-# CONFIG_MST_LDO is not set
-# CONFIG_MFC_CHARGER is not set
-# CONFIG_INTEGRITY is not set
+CONFIG_MST_LDO=y
+CONFIG_MFC_CHARGER=y
+CONFIG_INTEGRITY=y
+# CONFIG_INTEGRITY_SIGNATURE is not set
+CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_IMA is not set
+# CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
@@ -4840,11 +4860,11 @@ CONFIG_CRYPTO_SEQIV=y
 #
 CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTR=y
-# CONFIG_CRYPTO_CTS is not set
+CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
 # CONFIG_CRYPTO_PCBC is not set
-# CONFIG_CRYPTO_XTS is not set
+CONFIG_CRYPTO_XTS=y
 # CONFIG_CRYPTO_KEYWRAP is not set
 
 #
@@ -4929,7 +4949,9 @@ CONFIG_CRYPTO_DEV_CCP=y
 CONFIG_CRYPTO_DEV_CCP_DD=y
 CONFIG_CRYPTO_DEV_CCP_CRYPTO=y
 CONFIG_FMP_UFS=y
+CONFIG_FMP_MMC=y
 CONFIG_FMP_DM_CRYPT=y
+CONFIG_FMP_EXT4CRYPT_FS=y
 CONFIG_FIPS_FMP=y
 CONFIG_NODE_FOR_SELFTEST_FAIL=y
 # CONFIG_PANIC_FOR_SELFTEST_FAIL is not set
