--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -488,7 +488,10 @@ CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
-# CONFIG_ARMV8_DEPRECATED is not set
+CONFIG_ARMV8_DEPRECATED=y
+CONFIG_SWP_EMULATION=y
+CONFIG_CP15_BARRIER_EMULATION=y
+CONFIG_SETEND_EMULATION=y
 
 #
 # ARMv8.1 architectural features
@@ -3280,7 +3283,6 @@ CONFIG_USB_U_SERIAL=y
 CONFIG_USB_U_ETHER=y
 CONFIG_USB_F_NCM=y
 CONFIG_USB_F_RNDIS=y
-CONFIG_USB_F_MASS_STORAGE=y
 CONFIG_USB_F_FS=y
 CONFIG_USB_F_MTP=y
 CONFIG_USB_F_PTP=y
@@ -3297,7 +3299,7 @@ CONFIG_USB_CONFIGFS_NCM=y
 CONFIG_USB_CONFIGFS_RNDIS=y
 # CONFIG_USB_CONFIGFS_EEM is not set
 # CONFIG_USB_CONFIGFS_PHONET is not set
-CONFIG_USB_CONFIGFS_MASS_STORAGE=y
+# CONFIG_USB_CONFIGFS_MASS_STORAGE is not set
 # CONFIG_USB_CONFIGFS_F_LB_SS is not set
 CONFIG_USB_CONFIGFS_F_FS=y
 CONFIG_USB_CONFIGFS_F_DM=y
@@ -3805,7 +3807,7 @@ CONFIG_COMPOSITE_CLK_SAMSUNG=y
 CONFIG_CLKSRC_OF=y
 CONFIG_CLKSRC_PROBE=y
 CONFIG_ARM_ARCH_TIMER=y
-# CONFIG_ARM_ARCH_TIMER_EVTSTREAM is not set
+CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # CONFIG_ARM_ARCH_TIMER_VCT_ACCESS is not set
 # CONFIG_ARM_TIMER_SP804 is not set
 # CONFIG_ATMEL_PIT is not set
