defconfig: fix bugs

--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -106,17 +106,14 @@ CONFIG_RCU_EXPERT=y
 CONFIG_SRCU=y
 # CONFIG_TASKS_RCU is not set
 CONFIG_RCU_STALL_COMMON=y
-CONFIG_RCU_FANOUT=2
-CONFIG_RCU_FANOUT_LEAF=2
+CONFIG_RCU_FANOUT=64
+CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 CONFIG_RCU_BOOST=y
-CONFIG_RCU_KTHREAD_PRIO=99
-CONFIG_RCU_BOOST_DELAY=0
-CONFIG_RCU_NOCB_CPU=y
-# CONFIG_RCU_NOCB_CPU_NONE is not set
-# CONFIG_RCU_NOCB_CPU_ZERO is not set
-CONFIG_RCU_NOCB_CPU_ALL=y
+CONFIG_RCU_KTHREAD_PRIO=1
+CONFIG_RCU_BOOST_DELAY=500
+# CONFIG_RCU_NOCB_CPU is not set
 # CONFIG_RCU_EXPEDITE_BOOT is not set
 # CONFIG_BUILD_BIN2C is not set
 # CONFIG_IKCONFIG is not set
@@ -135,8 +132,8 @@ CONFIG_CGROUP_CPUACCT=y
 # CONFIG_CGROUP_PERF is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-CONFIG_CFS_BANDWIDTH=y
-CONFIG_RT_GROUP_SCHED=y
+# CONFIG_CFS_BANDWIDTH is not set
+# CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
@@ -463,7 +460,7 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=0
 # CONFIG_KSM is not set
-CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
+CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
 # CONFIG_FRONTSWAP is not set
@@ -478,7 +475,7 @@ CONFIG_ZSMALLOC=m
 # CONFIG_ZSMALLOC_STAT is not set
 # CONFIG_SWAP_ENABLE_READAHEAD is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
-# CONFIG_HPA is not set
+CONFIG_HPA=y
 # CONFIG_IDLE_PAGE_TRACKING is not set
 CONFIG_FRAME_VECTOR=y
 CONFIG_MMAP_READAROUND_LIMIT=32
@@ -1316,6 +1313,7 @@ CONFIG_SCSI_MOD=y
 # CONFIG_RAID_ATTRS is not set
 CONFIG_SCSI=y
 CONFIG_UFS_FMP_DM_CRYPT=y
+# CONFIG_UFS_FMP_ECRYPT_FS is not set
 CONFIG_UFS_FMP_EXT4CRYPT_FS=y
 CONFIG_UFS_SRPMB=y
 CONFIG_SCSI_DMA=y
@@ -1774,7 +1772,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
-CONFIG_DEVMEM=y
+# CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
 
 #
@@ -2905,9 +2903,9 @@ CONFIG_SND_SOC_COMPRESS=y
 # CONFIG_SND_SOC_IMX_AUDMUX is not set
 # CONFIG_SND_SOC_SAMSUNG is not set
 CONFIG_SND_SOC_SAMSUNG_EXYNOS8895=y
-CONFIG_SND_SOC_SAMSUNG_EXYNOS8895_MOON=y
+# CONFIG_SND_SOC_SAMSUNG_EXYNOS8895_MOON is not set
 CONFIG_SND_SOC_SAMSUNG_EXYNOS8895_ASHETON=y
-CONFIG_SND_SOC_SAMSUNG_EXYNOS8895_COD3033=y
+# CONFIG_SND_SOC_SAMSUNG_EXYNOS8895_COD3033 is not set
 CONFIG_SND_SOC_SAMSUNG_AUDIO=y
 CONFIG_SND_SOC_SAMSUNG_ABOX=y
 CONFIG_SEC_SND_ADAPTATION=y
@@ -2945,7 +2943,6 @@ CONFIG_SND_SOC_WM_ADSP=y
 # CONFIG_SND_SOC_CS42XX8_I2C is not set
 # CONFIG_SND_SOC_CS4349 is not set
 CONFIG_SND_SOC_CS47L92=y
-CONFIG_SND_SOC_COD3033X=y
 # CONFIG_SND_SOC_ES8328 is not set
 # CONFIG_SND_SOC_GTM601 is not set
 CONFIG_SND_SOC_MADERA=y
@@ -3362,6 +3359,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_VIA_SDMMC is not set
 CONFIG_MMC_DW=y
 CONFIG_MMC_DW_FMP_DM_CRYPT=y
+# CONFIG_MMC_DW_FMP_ECRYPT_FS is not set
 CONFIG_MMC_DW_FMP_EXT4CRYPT_FS=y
 CONFIG_MMC_DW_IDMAC=y
 CONFIG_MMC_DW_64BIT_DESC=y
@@ -4519,8 +4517,13 @@ CONFIG_CONFIGFS_FS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
-# CONFIG_ECRYPT_FS is not set
+CONFIG_ECRYPT_FS=y
+# CONFIG_ECRYPT_FS_MESSAGING is not set
+CONFIG_WTL_ENCRYPTION_FILTER=y
+# CONFIG_ECRYPTFS_FEK_INTEGRITY is not set
+CONFIG_SDP=y
 # CONFIG_SDP_KEY_DUMP is not set
+CONFIG_DLP=y
 CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
