defconfig: fix mali gpu freq show

--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -2696,7 +2696,7 @@ CONFIG_MALI_PM_QOS=y
 CONFIG_MALI_RT_PM=y
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
 # CONFIG_MALI_EXYNOS_TRACE is not set
-# CONFIG_MALI_DEBUG_SYS is not set
+CONFIG_MALI_DEBUG_SYS=y
 # CONFIG_MALI_DEVFREQ is not set
 # CONFIG_MALI_DMA_FENCE is not set
 CONFIG_MALI_EXPERT=y
@@ -2709,6 +2709,7 @@ CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="exynos"
 # CONFIG_MALI_SYSTEM_TRACE is not set
 CONFIG_MALI_BTS_OPTIMIZATION=y
 CONFIG_MALI_EXYNOS_SECURE_RENDERING=y
+CONFIG_MALI_DEBUG_KERNEL_SYSFS=y
 # CONFIG_MALI_FENCE_DEBUG is not set
 CONFIG_MALI_MIDGARD=y
 # CONFIG_MALI_MIDGARD_DVFS is not set
