defconfig: compile ppp compression built-in

--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -1535,10 +1535,10 @@ CONFIG_PHYLIB=y
 # CONFIG_MDIO_BCM_UNIMAC is not set
 # CONFIG_MICREL_KS8995MA is not set
 CONFIG_PPP=y
-CONFIG_PPP_BSDCOMP=m
-CONFIG_PPP_DEFLATE=m
+CONFIG_PPP_BSDCOMP=y
+CONFIG_PPP_DEFLATE=y
 # CONFIG_PPP_FILTER is not set
-CONFIG_PPP_MPPE=m
+CONFIG_PPP_MPPE=y
 # CONFIG_PPP_MULTILINK is not set
 # CONFIG_PPPOE is not set
 CONFIG_PPPOL2TP=y
