--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -1627,6 +1627,7 @@ CONFIG_SPLIT_ARGOS_SET=y
 # Input device support
 #
 CONFIG_INPUT=y
+# CONFIG_INPUT_BOOSTER is not set
 CONFIG_INPUT_LEDS=y
 CONFIG_INPUT_FF_MEMLESS=y
 # CONFIG_INPUT_POLLDEV is not set
