--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -410,17 +410,9 @@ CONFIG_ARM64_VA_BITS_39=y
 # CONFIG_ARM64_VA_BITS_48 is not set
 CONFIG_ARM64_VA_BITS=39
 # CONFIG_CPU_BIG_ENDIAN is not set
-CONFIG_SCHED_MC=y
+# CONFIG_SCHED_MC is not set
 # CONFIG_SCHED_SMT is not set
-CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE=y
-CONFIG_SCHED_HMP=y
-# CONFIG_SCHED_HMP_PRIO_FILTER is not set
-CONFIG_HMP_FAST_CPU_MASK=""
-CONFIG_HMP_SLOW_CPU_MASK=""
-CONFIG_HMP_VARIABLE_SCALE=y
-CONFIG_HMP_FREQUENCY_INVARIANT_SCALE=y
-# CONFIG_SCHED_HMP_LITTLE_PACKING is not set
-CONFIG_SCHED_HMP_TASK_BASED_SOFTLANDING=y
+# CONFIG_DISABLE_CPU_SCHED_DOMAIN_BALANCE is not set
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_TIMA is not set
@@ -4408,7 +4400,7 @@ CONFIG_SENSORS_VFS8XXX=y
 # CONFIG_SENSORS_ET320 is not set
 # CONFIG_SENSORS_ET5XX is not set
 # CONFIG_SENSORS_FINGERPRINT_DUALIZATION is not set
-CONFIG_SENSORS_FP_LOCKSCREEN_MODE=y
+# CONFIG_SENSORS_FP_LOCKSCREEN_MODE is not set
 # CONFIG_SENSORS_FP_TKEY_NOTI is not set
 # CONFIG_GATOR is not set
 
