--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -148,12 +148,12 @@ CONFIG_NET_NS=y
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
-CONFIG_RD_GZIP=y
+# CONFIG_RD_GZIP is not set
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
-CONFIG_RD_LZO=y
-# CONFIG_RD_LZ4 is not set
+# CONFIG_RD_LZO is not set
+CONFIG_RD_LZ4=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -4962,9 +4962,7 @@ CONFIG_CRYPTO_POST_LATE_INIT_SYNC=y
 # CONFIG_CRYPTO_POST_LATE_INIT is not set
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_S5P=y
-CONFIG_CRYPTO_DEV_CCP=y
-CONFIG_CRYPTO_DEV_CCP_DD=y
-CONFIG_CRYPTO_DEV_CCP_CRYPTO=y
+# CONFIG_CRYPTO_DEV_CCP is not set
 CONFIG_FMP_UFS=y
 CONFIG_FMP_MMC=y
 CONFIG_FMP_DM_CRYPT=y
@@ -5023,11 +5021,10 @@ CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_LZ4_COMPRESS=m
-CONFIG_LZ4_DECOMPRESS=m
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_DECOMPRESS_GZIP=y
-CONFIG_DECOMPRESS_LZO=y
+CONFIG_DECOMPRESS_LZ4=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
