--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.13 Kernel Configuration
+# Linux/arm64 4.4.111 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -94,6 +94,8 @@ CONFIG_HIGH_RES_TIMERS=y
 #
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
+# CONFIG_IRQ_TIME_ACCOUNTING is not set
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 CONFIG_TASK_DELAY_ACCT=y
@@ -144,6 +146,7 @@ CONFIG_UTS_NS=y
 CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
+# CONFIG_SCHED_USE_FLUID_RT is not set
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
@@ -232,7 +235,9 @@ CONFIG_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
+CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
+CONFIG_HAVE_ARCH_HUGE_VMAP=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
@@ -336,6 +341,7 @@ CONFIG_ARCH_EXYNOS=y
 # CONFIG_SOC_EXYNOS8890 is not set
 CONFIG_SOC_EXYNOS8895=y
 # CONFIG_SOC_EMULATOR8895 is not set
+CONFIG_SOC_EXYNOS8895_ANDROID_VERSION_O=y
 CONFIG_ARCH_EXYNOS8=y
 # CONFIG_ZONE_MOVABLE is not set
 
@@ -343,13 +349,6 @@ CONFIG_ARCH_EXYNOS8=y
 # SAMSUNG EXYNOS SoCs Support
 #
 # CONFIG_SKIP_HW_BREAKPOINT is not set
-CONFIG_MACH_EXYNOS8895_NONE=y
-# CONFIG_MACH_EXYNOS8895_GREATLTE_EUR_OPEN is not set
-# CONFIG_MACH_EXYNOS8895_GREATLTE_KOR is not set
-# CONFIG_MACH_EXYNOS8895_DREAMLTE_EUR_OPEN is not set
-# CONFIG_MACH_EXYNOS8895_DREAMLTE_KOR is not set
-# CONFIG_MACH_EXYNOS8895_DREAM2LTE_EUR_OPEN is not set
-# CONFIG_MACH_EXYNOS8895_DREAM2LTE_KOR is not set
 # CONFIG_EXYNOS_DTBTOOL is not set
 
 #
@@ -403,6 +402,7 @@ CONFIG_ARM64_ERRATUM_845719=y
 CONFIG_ARM64_ERRATUM_843419=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
+CONFIG_CAVIUM_ERRATUM_27456=y
 CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_16K_PAGES is not set
 # CONFIG_ARM64_64K_PAGES is not set
@@ -435,6 +435,7 @@ CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
 CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
+CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -442,7 +443,6 @@ CONFIG_ARCH_SELECT_MEMORY_MODEL=y
 CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_SYS_SUPPORTS_HUGETLBFS=y
-CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
 CONFIG_ARCH_WANT_HUGE_PMD_SHARE=y
 CONFIG_ARCH_HAS_CACHE_LINE_SIZE=y
 CONFIG_SELECT_MEMORY_MODEL=y
@@ -487,10 +487,12 @@ CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_UNMAP_KERNEL_AT_EL0=y
 CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
+# CONFIG_ARM64_SW_TTBR0_PAN is not set
 
 #
 # ARMv8.1 architectural features
@@ -498,6 +500,9 @@ CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_HW_AFDBM is not set
 # CONFIG_ARM64_PAN is not set
 # CONFIG_ARM64_LSE_ATOMICS is not set
+CONFIG_ARM64_UAO=y
+CONFIG_ARM64_MODULE_CMODEL_LARGE=y
+# CONFIG_RANDOMIZE_BASE is not set
 
 #
 # Boot options
@@ -904,6 +909,7 @@ CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
 # CONFIG_BRIDGE is not set
 CONFIG_HAVE_NET_DSA=y
+# CONFIG_NET_DSA is not set
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_DECNET is not set
 # CONFIG_LLC2 is not set
@@ -988,7 +994,6 @@ CONFIG_DNS_RESOLVER=m
 # CONFIG_BATMAN_ADV is not set
 # CONFIG_OPENVSWITCH is not set
 # CONFIG_VSOCKETS is not set
-# CONFIG_NETLINK_MMAP is not set
 # CONFIG_NETLINK_DIAG is not set
 # CONFIG_MPLS is not set
 # CONFIG_HSR is not set
@@ -1220,7 +1225,8 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
-CONFIG_UID_CPUTIME=y
+# CONFIG_UID_SYS_STATS is not set
+# CONFIG_MEMORY_STATE_TIME is not set
 CONFIG_EXYNOS_IMA=y
 # CONFIG_FAN_G761 is not set
 # CONFIG_C2PORT is not set
@@ -1444,6 +1450,7 @@ CONFIG_DM_CRYPT=y
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
 # CONFIG_DM_VERITY is not set
+# CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128 is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
 # CONFIG_TARGET_CORE is not set
@@ -1561,6 +1568,7 @@ CONFIG_WLAN=y
 CONFIG_BROADCOM_WIFI=y
 # CONFIG_BCM4330 is not set
 # CONFIG_BCM4343 is not set
+# CONFIG_BCM43436 is not set
 # CONFIG_BCM4334 is not set
 # CONFIG_BCM4335 is not set
 # CONFIG_BCM4339 is not set
@@ -1584,10 +1592,14 @@ CONFIG_WL_RELMCAST=y
 CONFIG_BCMDHD_PCIE=y
 # CONFIG_BCMDHD_PREALLOC_PKTIDMAP is not set
 CONFIG_BCMDHD_PREALLOC_MEMDUMP=y
+# CONFIG_WLAN_HERO is not set
+# CONFIG_WLAN_HERO2 is not set
 CONFIG_BCMDHD_OOB_HOST_WAKE=y
 CONFIG_SPLIT_ARGOS_SET=y
+# CONFIG_WLAN_GRACE is not set
 # CONFIG_WLAN_GREAT is not set
 # CONFIG_BCM_DETECT_CONSECUTIVE_HANG is not set
+CONFIG_WLAN_5GDISABLE=y
 # CONFIG_HOSTAP is not set
 # CONFIG_IPW2100 is not set
 # CONFIG_IPW2200 is not set
@@ -3680,10 +3692,10 @@ CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
-CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
+CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_ION=y
 # CONFIG_ION_TEST is not set
 # CONFIG_ION_DUMMY is not set
@@ -4216,6 +4228,7 @@ CONFIG_RAS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_LIBNVDIMM is not set
 # CONFIG_NVMEM is not set
 # CONFIG_STM is not set
@@ -4227,6 +4240,7 @@ CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # FPGA Configuration Support
 #
 # CONFIG_FPGA is not set
+# CONFIG_TEE is not set
 CONFIG_EXYNOS_BTS=y
 CONFIG_EXYNOS8895_BTS=y
 CONFIG_TRACE=y
@@ -4414,6 +4428,7 @@ CONFIG_SENSORS_VFS8XXX=y
 #
 CONFIG_ARM_PSCI_FW=y
 # CONFIG_FIRMWARE_MEMMAP is not set
+CONFIG_HAVE_ARM_SMCCC=y
 # CONFIG_ACPI is not set
 
 #
@@ -4448,9 +4463,11 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
 CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
+CONFIG_FS_ENCRYPTION=y
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4690,6 +4707,7 @@ CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_DEBUG_MEMORY_INIT is not set
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 CONFIG_HAVE_ARCH_KASAN=y
+# CONFIG_KASAN is not set
 # CONFIG_DEBUG_SHIRQ is not set
 
 #
@@ -4702,6 +4720,7 @@ CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_PANIC_TIMEOUT=1
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHED_INFO=y
+# CONFIG_PANIC_ON_RT_THROTTLING is not set
 # CONFIG_SCHEDSTATS is not set
 # CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
@@ -4798,6 +4817,7 @@ CONFIG_DEBUG_RODATA=y
 # Security options
 #
 CONFIG_KEYS=y
+CONFIG_KEYS_COMPAT=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
 CONFIG_ENCRYPTED_KEYS=y
@@ -4809,6 +4829,9 @@ CONFIG_SECURITY_NETWORK=y
 # CONFIG_SECURITY_NETWORK_XFRM is not set
 # CONFIG_SECURITY_PATH is not set
 CONFIG_LSM_MMAP_MIN_ADDR=0
+CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
+CONFIG_HAVE_ARCH_HARDENED_USERCOPY=y
+# CONFIG_HARDENED_USERCOPY is not set
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
@@ -4876,6 +4899,7 @@ CONFIG_CRYPTO_SEQIV=y
 # Block modes
 #
 CONFIG_CRYPTO_CBC=y
+CONFIG_CRYPTO_HEH=y
 CONFIG_CRYPTO_CTR=y
 CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_ECB=y
@@ -4896,7 +4920,7 @@ CONFIG_CRYPTO_HMAC=y
 # Digest
 #
 CONFIG_CRYPTO_CRC32C=y
-# CONFIG_CRYPTO_CRC32 is not set
+CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 CONFIG_CRYPTO_GHASH=y
 # CONFIG_CRYPTO_POLY1305 is not set
@@ -4909,7 +4933,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
-CONFIG_CRYPTO_SHA512=y
+# CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
 
@@ -4980,6 +5004,7 @@ CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_GHASH_ARM64_CE=y
+CONFIG_CRYPTO_POLY_HASH_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
