--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -238,6 +238,7 @@ CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_HUGE_VMAP=y
+CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
@@ -349,7 +350,6 @@ CONFIG_ARCH_EXYNOS8=y
 # SAMSUNG EXYNOS SoCs Support
 #
 # CONFIG_SKIP_HW_BREAKPOINT is not set
-# CONFIG_EXYNOS_DTBTOOL is not set
 
 #
 # Bus support
@@ -492,7 +492,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
-# CONFIG_ARM64_SW_TTBR0_PAN is not set
+CONFIG_ARM64_SW_TTBR0_PAN=y
 
 #
 # ARMv8.1 architectural features
@@ -502,7 +502,10 @@ CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_LSE_ATOMICS is not set
 CONFIG_ARM64_UAO=y
 CONFIG_ARM64_MODULE_CMODEL_LARGE=y
-# CONFIG_RANDOMIZE_BASE is not set
+CONFIG_ARM64_MODULE_PLTS=y
+CONFIG_RELOCATABLE=y
+CONFIG_RANDOMIZE_BASE=y
+CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
@@ -647,7 +650,7 @@ CONFIG_INET_XFRM_MODE_BEET=y
 # CONFIG_INET_LRO is not set
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
-# CONFIG_INET_UDP_DIAG is not set
+CONFIG_INET_UDP_DIAG=y
 CONFIG_INET_DIAG_DESTROY=y
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
@@ -1225,8 +1228,9 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
-# CONFIG_UID_SYS_STATS is not set
-# CONFIG_MEMORY_STATE_TIME is not set
+CONFIG_UID_SYS_STATS=y
+# CONFIG_UID_SYS_STATS_DEBUG is not set
+CONFIG_MEMORY_STATE_TIME=y
 CONFIG_EXYNOS_IMA=y
 # CONFIG_FAN_G761 is not set
 # CONFIG_C2PORT is not set
@@ -1918,7 +1922,7 @@ CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_DESIGNWARE_PCI is not set
 # CONFIG_I2C_EMEV2 is not set
-CONFIG_I2C_EXYNOS5=y
+# CONFIG_I2C_EXYNOS5 is not set
 CONFIG_I2C_SAMSUNG_HWACG=y
 CONFIG_EXYNOS_SPEEDY=y
 CONFIG_I2C_GPIO=y
@@ -3295,6 +3299,7 @@ CONFIG_USB_U_SERIAL=y
 CONFIG_USB_U_ETHER=y
 CONFIG_USB_F_NCM=y
 CONFIG_USB_F_RNDIS=y
+CONFIG_USB_F_MASS_STORAGE=y
 CONFIG_USB_F_FS=y
 CONFIG_USB_F_MIDI=y
 CONFIG_USB_F_MTP=y
@@ -3312,7 +3317,7 @@ CONFIG_USB_CONFIGFS_NCM=y
 CONFIG_USB_CONFIGFS_RNDIS=y
 # CONFIG_USB_CONFIGFS_EEM is not set
 # CONFIG_USB_CONFIGFS_PHONET is not set
-# CONFIG_USB_CONFIGFS_MASS_STORAGE is not set
+CONFIG_USB_CONFIGFS_MASS_STORAGE=y
 # CONFIG_USB_CONFIGFS_F_LB_SS is not set
 CONFIG_USB_CONFIGFS_F_FS=y
 CONFIG_USB_CONFIGFS_F_DM=y
@@ -3913,7 +3918,7 @@ CONFIG_DEVFREQ_GOV_SIMPLE_INTERACTIVE=y
 # DEVFREQ Drivers
 #
 CONFIG_ARM_EXYNOS_DEVFREQ=y
-CONFIG_ARM_EXYNOS_DEVFREQ_DEBUG=y
+# CONFIG_ARM_EXYNOS_DEVFREQ_DEBUG is not set
 # CONFIG_PM_DEVFREQ_EVENT is not set
 CONFIG_ARM_EXYNOS8895_BUS_DEVFREQ=y
 # CONFIG_EXTCON is not set
@@ -4208,7 +4213,7 @@ CONFIG_PHY_EXYNOS_DISPLAYPORT=y
 # CONFIG_PHY_PXA_28NM_USB2 is not set
 # CONFIG_PHY_EXYNOS_DP_VIDEO is not set
 # CONFIG_BCM_KONA_USB2_PHY is not set
-CONFIG_PHY_EXYNOS5_USBDRD=y
+# CONFIG_PHY_EXYNOS5_USBDRD is not set
 CONFIG_PHY_EXYNOS_USBDRD=y
 CONFIG_PHY_SAMSUNG_USB_CAL=y
 # CONFIG_PHY_XGENE is not set
@@ -4462,12 +4467,12 @@ CONFIG_F2FS_FS_XATTR=y
 # CONFIG_F2FS_FS_POSIX_ACL is not set
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
-CONFIG_F2FS_FS_ENCRYPTION=y
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_FS_DAX is not set
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
-CONFIG_FS_ENCRYPTION=y
+# CONFIG_FS_ENCRYPTION is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
@@ -4721,10 +4726,10 @@ CONFIG_PANIC_TIMEOUT=1
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHED_INFO=y
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
-# CONFIG_SCHEDSTATS is not set
+CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
 # CONFIG_DEBUG_TIMEKEEPING is not set
-# CONFIG_TIMER_STATS is not set
+CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 
 #
@@ -4831,7 +4836,8 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=0
 CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HAVE_ARCH_HARDENED_USERCOPY=y
-# CONFIG_HARDENED_USERCOPY is not set
+CONFIG_HARDENED_USERCOPY=y
+# CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
@@ -4933,7 +4939,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
-# CONFIG_CRYPTO_SHA512 is not set
+CONFIG_CRYPTO_SHA512=y
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
 
