--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -238,7 +238,6 @@ CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_IRQ_TIME_ACCOUNTING=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_HAVE_ARCH_HUGE_VMAP=y
-CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_MODULES_USE_ELF_RELA=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
@@ -500,12 +499,9 @@ CONFIG_ARM64_SW_TTBR0_PAN=y
 # CONFIG_ARM64_HW_AFDBM is not set
 # CONFIG_ARM64_PAN is not set
 # CONFIG_ARM64_LSE_ATOMICS is not set
-CONFIG_ARM64_UAO=y
+# CONFIG_ARM64_UAO is not set
 CONFIG_ARM64_MODULE_CMODEL_LARGE=y
-CONFIG_ARM64_MODULE_PLTS=y
-CONFIG_RELOCATABLE=y
-CONFIG_RANDOMIZE_BASE=y
-CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
+# CONFIG_RANDOMIZE_BASE is not set
 
 #
 # Boot options
@@ -1185,7 +1181,7 @@ CONFIG_ZRAM=m
 # CONFIG_BLK_DEV_UMEM is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
 CONFIG_BLK_DEV_LOOP=y
-CONFIG_BLK_DEV_LOOP_MIN_COUNT=0
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
 # CONFIG_BLK_DEV_CRYPTOLOOP is not set
 # CONFIG_BLK_DEV_DRBD is not set
 # CONFIG_BLK_DEV_NBD is not set
@@ -1603,7 +1599,7 @@ CONFIG_SPLIT_ARGOS_SET=y
 # CONFIG_WLAN_GRACE is not set
 # CONFIG_WLAN_GREAT is not set
 # CONFIG_BCM_DETECT_CONSECUTIVE_HANG is not set
-CONFIG_WLAN_5GDISABLE=y
+# CONFIG_WLAN_5GDISABLE is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IPW2100 is not set
 # CONFIG_IPW2200 is not set
@@ -1922,7 +1918,7 @@ CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_DESIGNWARE_PLATFORM is not set
 # CONFIG_I2C_DESIGNWARE_PCI is not set
 # CONFIG_I2C_EMEV2 is not set
-# CONFIG_I2C_EXYNOS5 is not set
+CONFIG_I2C_EXYNOS5=y
 CONFIG_I2C_SAMSUNG_HWACG=y
 CONFIG_EXYNOS_SPEEDY=y
 CONFIG_I2C_GPIO=y
@@ -3888,7 +3884,7 @@ CONFIG_ACPM_DVFS=y
 # CONFIG_VDD_AUTO_CAL is not set
 CONFIG_USI=y
 # CONFIG_EXYNOS_SECURE_LOG is not set
-CONFIG_EXYNOS_KERNEL_PROTECTION=y
+# CONFIG_EXYNOS_KERNEL_PROTECTION is not set
 # CONFIG_EXYNOS_SDM is not set
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS_ACPM=y
@@ -4213,7 +4209,7 @@ CONFIG_PHY_EXYNOS_DISPLAYPORT=y
 # CONFIG_PHY_PXA_28NM_USB2 is not set
 # CONFIG_PHY_EXYNOS_DP_VIDEO is not set
 # CONFIG_BCM_KONA_USB2_PHY is not set
-# CONFIG_PHY_EXYNOS5_USBDRD is not set
+CONFIG_PHY_EXYNOS5_USBDRD=y
 CONFIG_PHY_EXYNOS_USBDRD=y
 CONFIG_PHY_SAMSUNG_USB_CAL=y
 # CONFIG_PHY_XGENE is not set
@@ -4836,8 +4832,7 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=0
 CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HAVE_ARCH_HARDENED_USERCOPY=y
-CONFIG_HARDENED_USERCOPY=y
-# CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
+# CONFIG_HARDENED_USERCOPY is not set
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
@@ -4939,7 +4934,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
-CONFIG_CRYPTO_SHA512=y
+# CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
 
