--- a/android/custom_configs/android-base.config
+++ b/android/custom_configs/android-base.config
@@ -4,15 +4,18 @@
 # CONFIG_FHANDLE is not set
 # CONFIG_INET_LRO is not set
 # CONFIG_NFSD is not set
+# CONFIG_NFS_FS is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_USELIB is not set
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_AIO=y
 CONFIG_ANDROID=y
-CONFIG_ANDROID_BINDER_DEVICES=binder,hwbinder,vndbinder
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
 CONFIG_AUDIT=y
+CONFIG_BINFMT_ELF=y
+CONFIG_BINFMT_SCRIPT=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_BLOCK=y
 CONFIG_CC_STACKPROTECTOR_STRONG=y
@@ -29,13 +32,19 @@ CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
+CONFIG_CRYPTO_SHA512=y
+CONFIG_DEBUG_RODATA=y
+CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 CONFIG_EMBEDDED=y
 CONFIG_EPOLL=y
 CONFIG_EVENTFD=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FUTEX=y
+CONFIG_HARDENED_USERCOPY=y
 CONFIG_HIGH_RES_TIMERS=y
+CONFIG_IKCONFIG=y
+CONFIG_IKCONFIG_PROC=y
 CONFIG_INET6_ESP=y
 CONFIG_INET6_IPCOMP=y
 CONFIG_INET6_XFRM_MODE_TRANSPORT=y
@@ -77,9 +86,12 @@ CONFIG_IP_NF_TARGET_MASQUERADE=y
 CONFIG_IP_NF_TARGET_NETMAP=y
 CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_IP_NF_TARGET_REJECT=y
+CONFIG_L2TP=y
 CONFIG_MAGIC_SYSRQ=y
+CONFIG_MMU=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
+CONFIG_MODVERSIONS=y
 CONFIG_MULTIUSER=y
 CONFIG_NET=y
 CONFIG_NETDEVICES=y
@@ -121,6 +133,7 @@ CONFIG_NET_CLS_ACT=y
 CONFIG_NET_CLS_U32=y
 CONFIG_NET_EMATCH=y
 CONFIG_NET_EMATCH_U32=y
+CONFIG_NET_IPGRE_DEMUX=y
 CONFIG_NET_IPVTI=y
 CONFIG_NET_KEY=y
 CONFIG_NET_SCHED=y
@@ -147,16 +160,20 @@ CONFIG_NO_HZ=y
 CONFIG_PACKET=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PPP=y
-CONFIG_PPPOLAC=y
-CONFIG_PPPOPNS=y
+CONFIG_PPPOL2TP=y
 CONFIG_PPP_BSDCOMP=y
 CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_MPPE=y
+CONFIG_PPTP=y
 CONFIG_PREEMPT=y
 CONFIG_PROC_FS=y
 CONFIG_PROFILING=y
+CONFIG_QFMT_V2=y
+CONFIG_QUOTA=y
+CONFIG_QUOTACTL=y
 CONFIG_RTC_CLASS=y
 CONFIG_RT_GROUP_SCHED=y
+CONFIG_SCHED_DEBUG=y
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
 CONFIG_SECURITY=y
@@ -179,6 +196,7 @@ CONFIG_TTY=y
 CONFIG_TUN=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_UNIX=y
+CONFIG_USB=y
 CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_F_ACC=y
 CONFIG_USB_CONFIGFS_F_AUDIO_SRC=y
