--- a/android/custom_configs/android-base.config
+++ b/android/custom_configs/android-base.config
@@ -4,9 +4,14 @@
 # CONFIG_FHANDLE is not set
 # CONFIG_INET_LRO is not set
 # CONFIG_NFSD is not set
-# CONFIG_NFS_FS is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_USELIB is not set
+# CONFIG_IKCONFIG is not set
+# CONFIG_IKCONFIG_PROC is not set
+# CONFIG_MODVERSIONS is not set
+# CONFIG_SCHED_DEBUG is not set
+# CONFIG_DEBUG_SET_MODULE_RONX is not set
+# CONFIG_HARDENED_USERCOPY is not set
 CONFIG_ADVISE_SYSCALLS=y
 CONFIG_AIO=y
 CONFIG_ANDROID=y
@@ -32,19 +37,14 @@ CONFIG_CRYPTO_MD5=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
-CONFIG_CRYPTO_SHA512=y
 CONFIG_DEBUG_RODATA=y
-CONFIG_DEBUG_SET_MODULE_RONX=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 CONFIG_EMBEDDED=y
 CONFIG_EPOLL=y
 CONFIG_EVENTFD=y
 CONFIG_FILE_LOCKING=y
 CONFIG_FUTEX=y
-CONFIG_HARDENED_USERCOPY=y
 CONFIG_HIGH_RES_TIMERS=y
-CONFIG_IKCONFIG=y
-CONFIG_IKCONFIG_PROC=y
 CONFIG_INET6_ESP=y
 CONFIG_INET6_IPCOMP=y
 CONFIG_INET6_XFRM_MODE_TRANSPORT=y
@@ -91,7 +91,6 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_MMU=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODVERSIONS=y
 CONFIG_MULTIUSER=y
 CONFIG_NET=y
 CONFIG_NETDEVICES=y
@@ -173,7 +172,6 @@ CONFIG_QUOTA=y
 CONFIG_QUOTACTL=y
 CONFIG_RTC_CLASS=y
 CONFIG_RT_GROUP_SCHED=y
-CONFIG_SCHED_DEBUG=y
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
 CONFIG_SECURITY=y
