--- a/android/custom_configs/android-recommended-arm64.config
+++ b/android/custom_configs/android-recommended-arm64.config
@@ -1,3 +1,3 @@
 #  KEEP ALPHABETICALLY SORTED
-CONFIG_RANDOMIZE_BASE=y
-CONFIG_RELOCATABLE=y
+# CONFIG_RANDOMIZE_BASE is not set
+# CONFIG_RELOCATABLE is not set
