--- a/arch/arm64/configs/8895_defconfig
+++ b/arch/arm64/configs/8895_defconfig
@@ -627,8 +627,9 @@ CONFIG_IP_PNP_DHCP=y
 CONFIG_IP_PNP_BOOTP=y
 CONFIG_IP_PNP_RARP=y
 # CONFIG_NET_IPIP is not set
-# CONFIG_NET_IPGRE_DEMUX is not set
+CONFIG_NET_IPGRE_DEMUX=y
 CONFIG_NET_IP_TUNNEL=y
+# CONFIG_NET_IPGRE is not set
 # CONFIG_IP_MROUTE is not set
 # CONFIG_SYN_COOKIES is not set
 CONFIG_NET_IPVTI=y
@@ -1540,6 +1541,7 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_MPPE=y
 # CONFIG_PPP_MULTILINK is not set
 # CONFIG_PPPOE is not set
+CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
